import param modulation